--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,22 @@
 <html>
   <head>
     <link rel="stylesheet" href="./css/index.css" />
+    <script src="./lib/echarts.js"></script>
+    <script src="./lib/jquery.js"></script>
   </head>
   <body>
+    <div id="chart1"></div>
+    <div id="chart2"></div>
+    <div id="chart3"></div>
+    <div id="chart4"></div>
+    <div id="chart5"></div>
+    <div id="chart6"></div>
+    
+    <script src="./js/constants.js"></script>
+    <script src="./js/data.js"></script>
+    <script src="./js/chart1.js"></script>
+    <script src="./js/chart2.js"></script>
+    <script src="./js/chart3.js"></script>
     <script src="./js/index.js"></script>
   </body>
 </html>
