--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <script src="./js/chart1.js"></script>
     <script src="./js/chart2.js"></script>
     <script src="./js/chart3.js"></script>
+    <script src="./js/chart4.js"></script>
     <script src="./js/index.js"></script>
   </body>
 </html>
