Feat: map and another charts

--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
     <script src="./lib/jquery.js"></script>
   </head>
   <body>
-    <div id="chart1"></div>
-    <div id="chart2"></div>
+    <!-- <div id="chart1"></div>
+    <div id="chart2"></div> -->
     <div id="chart3"></div>
     <div id="chart4"></div>
     <div id="chart5"></div>
@@ -19,6 +19,7 @@
     <script src="./js/chart2.js"></script>
     <script src="./js/chart3.js"></script>
     <script src="./js/chart4.js"></script>
+    <script src="./js/chart5.js"></script>
     <script src="./js/index.js"></script>
   </body>
 </html>
