--- a/app/index.html
+++ b/app/index.html
@@ -6,12 +6,66 @@
     <script src="./lib/jquery.js"></script>
   </head>
   <body>
-    <!-- <div id="chart1"></div>
-    <div id="chart2"></div> -->
-    <div id="chart3"></div>
-    <div id="chart4"></div>
-    <div id="chart5"></div>
-    <div id="chart6"></div>
+    <header>
+      <div class="container">
+        <img src="./img/header.png">
+      </div>
+    </header>
+    <main class="container">
+      <div class="row row-1">
+        <div class="column column-1">
+          <div class="chart">
+            <div class="logo">
+              <img src="./img/map-text.png">
+            </div>
+            <div id="chart4"></div>
+          </div>
+        </div>
+        <div class="column column-2">
+          <div class="row">
+            <div class="chart">
+              <div class="logo">
+                <img src="./img/bar-text.png">
+              </div>
+              <div id="chart1"></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="chart">
+              <div class="logo">
+                <img src="./img/bar-line-1-text.png" class="small">
+              </div>
+              <div id="chart2"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row row-2">
+        <div class="chart">
+          <div class="logo">
+            <img src="./img/bar-line-2-text.png" class="small">
+          </div>
+          <div id="chart3"></div>
+        </div>
+      </div>
+      <div class="row row-3">
+        <div class="column column-1">
+          <div class="left">
+            <img src="./img/rumour.png">
+          </div>
+          <div id="chart5"></div>
+        </div>
+        <div class="column column-2">
+          Empty
+        </div>
+      </div>
+      <img src="./img/virus-1.png" class="v1">
+      <img src="./img/virus-2.png" class="v2">
+    </main>
+    <footer>
+      <img src="./img/bottom-text.png">
+      <div class="blue"></div>
+    </footer>
     
     <script src="./js/constants.js"></script>
     <script src="./js/data.js"></script>
