Feat: webfont and list

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
         <div class="column column-1">
           <div class="chart">
             <div class="logo">
-              <img src="./img/map-text.png">
+              #谣言数量变化地图
             </div>
             <div id="chart4"></div>
           </div>
@@ -25,7 +25,7 @@
           <div class="row">
             <div class="chart">
               <div class="logo">
-                <img src="./img/bar-text.png">
+                #谣言总量和当日新增数量柱状图
               </div>
               <div id="chart1"></div>
             </div>
@@ -33,7 +33,7 @@
           <div class="row">
             <div class="chart">
               <div class="logo">
-                <img src="./img/bar-line-1-text.png" class="small">
+                #谣言总量和每日感染人数柱状折线图
               </div>
               <div id="chart2"></div>
             </div>
@@ -43,7 +43,7 @@
       <div class="row row-2">
         <div class="chart">
           <div class="logo">
-            <img src="./img/bar-line-2-text.png" class="small">
+            #每日谣言数量和政府每日行动数量柱状折线图
           </div>
           <div id="chart3"></div>
         </div>
@@ -53,14 +53,15 @@
           <div class="left">
             <img src="./img/rumour.png">
           </div>
-          <div id="chart5"></div>
+          <div class="right">
+            <div id="chart5"></div>
+          </div>
         </div>
         <div class="column column-2">
-          Empty
+          <div class="J_list list"></div>
         </div>
       </div>
       <img src="./img/virus-1.png" class="v1">
-      <img src="./img/virus-2.png" class="v2">
     </main>
     <footer>
       <img src="./img/bottom-text.png">
