Feat: text style

--- a/app/index.html
+++ b/app/index.html
@@ -51,7 +51,17 @@
       <div class="row row-3">
         <div class="column column-1">
           <div class="left">
-            <img src="./img/rumour.png">
+            <div class="left-left">
+              <div>谣</div>
+              <div>言</div>
+              <div>浏</div>
+              <div>览</div>
+              <div>量</div>
+            </div>
+            <div class="left-right">
+              <div class="top">TOP</div>
+              <div class="five">5</div>
+            </div>
           </div>
           <div class="right">
             <div id="chart5"></div>
