--- a/app/index.html
+++ b/app/index.html
@@ -78,13 +78,13 @@
       <div class="blue"></div>
     </footer>
     
-    <script src="./js/constants.js"></script>
-    <script src="./js/data.js"></script>
-    <script src="./js/chart1.js"></script>
-    <script src="./js/chart2.js"></script>
-    <script src="./js/chart3.js"></script>
-    <script src="./js/chart4.js"></script>
-    <script src="./js/chart5.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/constants.js?421321"></script>
+    <script src="./js/data.js?412321"></script>
+    <script src="./js/chart1.js?412321"></script>
+    <script src="./js/chart2.js?4r123421"></script>
+    <script src="./js/chart3.js?4r123421"></script>
+    <script src="./js/chart4.js?4r123421"></script>
+    <script src="./js/chart5.js?4r123421"></script>
+    <script src="./js/index.js?4r123421"></script>
   </body>
 </html>
