--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/index.css?dsafasdsa" />
     <script src="./lib/echarts.js"></script>
     <script src="./lib/jquery.js"></script>
   </head>
