--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
   <head>
+    <title>COVID-19 · 谣言发展可视化</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <link rel="stylesheet" href="./css/index.css?dsafasdsa" />
     <script src="./lib/echarts.js"></script>
     <script src="./lib/jquery.js"></script>
