--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,11 @@
   <body>
     <header>
       <div class="container">
-        <img src="./img/header.png">
+        <img src="./img/virus-title.png" class="png">
+        <div class="tlt">
+          <div class="top">COVID-19 · 谣言发展可视化</div>
+          <div class="bottom">展示了疫情期间谣言数量<span class="gray">发展、变化</span>的整体情况，以揭示出谣言生发和变化的规律</div>
+        </div>
       </div>
     </header>
     <main class="container">
@@ -78,7 +82,10 @@
       <img src="./img/virus-1.png" class="v1">
     </main>
     <footer>
-      <img src="./img/bottom-text.png">
+      <div class="container source">
+        <div>数据来源：头条辟谣</div>
+        <div>数据截至：2020年5月7日</div>
+      </div>
       <div class="blue"></div>
     </footer>
     
