--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
           <div class="row">
             <div class="chart">
               <div class="logo">
-                #谣言总量和当日新增数量柱状图
+                #每日谣言总量和每日谣言增长量柱状折线图
               </div>
               <div id="chart1"></div>
             </div>
@@ -48,7 +48,7 @@
           <div class="row">
             <div class="chart">
               <div class="logo">
-                #谣言总量和每日感染人数柱状折线图
+                #每日谣言增长量和每日感染人数柱状折线图
               </div>
               <div id="chart2"></div>
             </div>
@@ -64,7 +64,7 @@
         <img src="./img/bar.png" class="tool">
         <div class="chart">
           <div class="logo">
-            #每日谣言数量和政府每日行动数量柱状折线图
+            #每日谣言增长量和每日政府行动数量柱状折线图
           </div>
           <div id="chart3"></div>
         </div>
