--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
     <main class="container">
       <div class="row row-text row-text-1">
         <div class="text">
-          我们从今日头条头条辟谣官方号爬取1月26日至5月7日的谣言共<span class="gray">1567</span>条，并按照发布时间、内容、地点进行分类。根据谣言内容涉及的省份制作成了<span class="gray">动态交互热力地图</span>，可以观察到谣言的数量一直以<span class="gray">湖北</span>为中心，并逐渐向外扩展；同时，谣言数量的增长随疫情的趋缓而逐渐降低，并与病例数成正相关。
+          我们从今日头条头条辟谣官方号爬取1月26日至5月7日的谣言共<span class="gray">1567</span>条，并按照发布时间、内容、地点进行分类。根据谣言内容涉及的省份制作成了<span class="gray">动态交互地图</span>，可以观察到谣言的数量一直以<span class="gray">湖北</span>为中心，并逐渐向外扩展；同时，谣言数量的增长随疫情的趋缓而逐渐降低，并与病例数成正相关。
         </div>
       </div>
       <div class="row row-1">
