--- a/app/index.html
+++ b/app/index.html
@@ -110,6 +110,7 @@
     <div class="bg-virus"></div>
     <script src="./js/constants.js?421321"></script>
     <script src="./js/data.js?412321"></script>
+    <script src="./js/china.geojson.js"></script>
     <script src="./js/chart1.js?412321"></script>
     <script src="./js/chart2.js?4r123421"></script>
     <script src="./js/chart3.js?4r123421"></script>
